# front/api/blogs/index.ts
@@ -14,11 +14,6 @@ export type Methods = {
     status: 200;
     /** successfully request */
     resBody: Types.BlogResponse;
-
-    reqBody: {
-      title: string;
-      body: string;
-      blog_type: Types.BlogType;
-    };
+    reqBody: Types.BlogCreateRequestBody;
   };
 };
